# Web_App

./: .gitignore  pyproject.toml
TODO/: core.md
src/web_app/: cli.py  core.py  utils.py
src/web_app/templates/: name_web_app.desktop.j2  name_web_app.sh.j2
