[project]
name = "web-app"
version = "0.1.0"
description = "Create Chromium-based web apps"
readme = "README.md"
authors = [
    { name = "Omar Faruk", email = "omarfaruk20@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.19.2",
]

# [build-system]
# requires = ["uv_build>=0.9.1,<0.10.0"]
# build-backend = "uv_build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_app"]

[tool.hatch.build.targets.wheel.force-include]
"src/web_app/templates" = "web_app/templates"

[project.scripts]
web-app = "web_app.cli:main"

[project.urls]
Homepage = "https://github.com/omarfaruk20/web-app"


